# ScrapLook

./: README.md
scraplook-backend/: .gitignore  .pdm-python  .pylintrc  dev.db  dev.db-journal  logger_config.yaml  package-lock.json  package.json  pyproject.toml  schema.prisma
scraplook-backend/config/: .isort.cfg  .pylintrc
scraplook-backend/migrations/20250703061918_init_tera/: migration.sql
scraplook-backend/prisma/: dev.db  model.puml  schema.prisma
scraplook-backend/prisma/migrations/20250629090944_init/: migration.sql
scraplook-backend/src/scraplook-backend/: main.py
scraplook-backend/src/scraplook-backend/config/: app_config.py  logger.py  prisma_client.py
scraplook-backend/src/scraplook-backend/models/: email_address.py  message.py  user.py
scraplook-backend/src/scraplook-backend/prisma/: actions.py  bases.py  client.py  metadata.py  models.py  schema.prisma  types.py
scraplook-backend/src/scraplook-backend/routes/: auth_route.py  email_address_route.py  messages_route.py  seeder_route.py  user_route.py
scraplook-backend/src/scraplook-backend/services/: email_address_services.py  messages_services.py  user_services.py
scraplook-backend/src/scraplook-backend/utils/: hash.py
scraplook-backend/venv_init_scripts/: env_build.bat  env_build.sh
scraplook-frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scraplook-frontend/src/: App.vue  api.ts  config.js  main.ts
scraplook-frontend/src/components/: Header.vue  Home.vue  LoginPage.vue
scraplook-frontend/src/components/mail/: CreateMail.vue  EmailDetails.vue  EmailDetailsReceived.vue  EmailDetailsSent.vue
scraplook-frontend/src/components/message/: SendMessage.vue
scraplook-frontend/src/components/user/: CreateUser.vue  ViewUsers.vue
scraplook-frontend/src/composables/: useAuth.ts
scraplook-frontend/src/router/: router.ts
scraplook-frontend/src/watchers/: accessTokenWatcher.ts
